# TimeKeep

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 131212f11a0f_add_user_rel_table_organization.py  1575af2bb126_create_table.py  (+2 more)
backend/: Makefile  pyproject.toml  pytest.ini  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 00ac1f5e92ff_unique_true_name_table_department.py  4e2c0c8c22b6_initial_tables.py  5661204e3c4e_update_model_addad_create_at_update_at.py  5af7d574098a_username_unique_true.py  5b445e5595e7_initial_tables.py  7f3deeb36256_add_on_delete_cascade.py  88639ca1c904_initial_tables.py  aa060cd54451_addad_hours_used_table_.py  c2a840ad066c_initial_tables.py  c4965d89892b_update_model_overtime_column_date_o_date.py  e7af5730d89a_initial_tables.py  e93964efefb1_initial_tables.py  f0a16e728012_initial_tables.py  f1ccba7ac372_column_department_id_true.py
backend/scripts/: create_superuser.py
backend/src/: main.py
backend/src/api/v1/: router_registration.py
backend/src/api/v1/auth/: dependencies.py  get_user.py  jwt.py  permissions.py  repository.py  router.py  schemas.py  service.py  users.py
backend/src/api/v1/auth_2/: router.py  schemas.py  service.py
backend/src/api/v1/day_off/: dependencies.py  errors.py  overtime_allocator.py  repository.py  router.py  schemas.py  service.py
backend/src/api/v1/department/: dependencies.py  repository.py  router.py  schemas.py  service.py
backend/src/api/v1/overtime/: dependencies.py  repository.py  router.py  schemas.py  service.py
backend/src/api/v1/user/: dependencies.py  repository.py  router.py  schemas.py  service.py
backend/src/core/: config.py  session.py
backend/src/models/: __init__.py  dayoff.py  department.py  overtime.py  overtime_dayoff_link.py  user.py
backend/src/tests/: conftest.py  test_01_create_superuser.py  test_02_department.py
backend/templates/: base.html  login.html  overtimes.html
backend/test/: conftest.py  test_01_create_superuser.py  test_01_department.py  test_02_auth.py  test_02_department.py  test_03_auth.py
backend/tests/api/: conftest.py  test_main.py
backend/tests/core/: test_db.py
backend/tests/database/: test_db.py
nginx/: nginx.conf
scripts/: create_superuser.py
src/: Dockerfile  main.py
(+112 files in other folders)
