[project]
name = "timekeep"
version = "0.1.0"
description = ""
authors = [
    {name = "Koresh06",email = "korets-24@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "environs (>=14.1.0,<15.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "betterlogging (>=1.0.0,<2.0.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "bcrypt (==4.0.1)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pymorphy3 (>=2.0.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"

